--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
+*{
+    margin: 0 15px;
+    padding: 10px 0 ;
+}
 header{
-    background-color: #000000;
+    background-color: #383d58;
     color: white;
+@@ -14,4 +18,12 @@ body{
+.cabecalho{
+    background-color: #383d58;
+    display: flex;
+    justify-content: space-around;
+    padding: 24px 0;
+    font-size: 24px;
 }
-body{
-    background-color: #060636;
-    color: white;
-
-}
-.cabecalho-imagem{
-    width: 20%;
-}
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
